--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1370,107 +1370,107 @@ stories:
   domain: http://www.loganbanner.com/
   link: https://www.loganbanner.com/online_features/fashion_beauty_fitness/why-a-personalized-diet-can-help-you-achieve-better-results/article_c8226dbf-3c34-5b8b-bd7f-7c7c2e6d8263.html
 images:
-- name: oldhotel-oldhotel-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-graham-sutherland.jpg
-- name: braceros-domingo-ulloa-working-waterfront-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-working-waterfront-2.jpg
-- name: berlinwall-DSC-0084-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-really-hot.jpg
-- name: dc-statue-dcstatue-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
-- name: gypsy-wagon-gypsywagon-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-post-modern.jpg
-- name: downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
-- name: copper-circuit-DSC_0088.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0088.jpg
-- name: stalin-time-highway-granary_36331800650_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-highway-granary_36331800650_o.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-emily-carr.jpg
-- name: art-museum-art-museum-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-pablo-blue.jpg
-- name: oldcabin-store-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-oily-mcoilface.jpg
-- name: downtheline-downtheline-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-matrix.jpg
-- name: oldtrain-oldtrain-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-post-modern.jpg
-- name: nazi-invasion-building-shadows-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-building-shadows-sun.jpg
-- name: containership-containership-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-spagetti-accident.jpg
-- name: hollywood-building-hollywood-building-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kand-two.jpg
-- name: walled-garden-walled-garden-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-alberto-giacometti.jpg
-- name: rain-princess-IMG_8494.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8494.jpg
-- name: blossombar-dark-rain-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-00-00.jpg
-- name: border-fence-border-fence-on-hill-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-electricity.jpg
-- name: locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-jap-wav-pr.jpg
-- name: blossombar-blue-granite-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-50-62.jpg
-- name: bordercrossing-bordercrossing-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-color.jpg
-- name: old-barn-old-barn-1500-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
-- name: death-valley-death-valley-national-park-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-really-hot.jpg
-- name: bf-skinner-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-streets-laundromat.jpg
-- name: christianity-christianity-under-construction-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-china-prop.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-- name: old-door-lock-old-door-lock-2-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crunch-paper.jpg
-- name: liberty-back-statue-liberty-back-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dry-skin.jpg
-- name: castle-wall-DSC-0067-cinnamon-rolls.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-cinnamon-rolls.JPG
-- name: trucksilo-trucksilo-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-satan-red.jpg
-- name: beach-rocks-beach-rocks-currents-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-really-hot.jpg
-- name: power-lines-power-lines-empty-space-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-brush.jpg
-- name: statue-of-liberty-front-view-statueofliberty-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-matrix.jpg
-- name: power-lines-power-lines-empty-space-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
-- name: white-house-whitehouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-monet-one.jpg
-- name: nazi-invasion-old-church-in-field.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-church-in-field.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-propaganda-leaflets.jpg
-- name: nazi-invasion-IMG_8486.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8486.jpg
-- name: server-cloud-server-racks-clouds-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-really-hot.jpg
-- name: rain-princess-chess-in-the-park-with-pigeons.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-chess-in-the-park-with-pigeons.jpg
-- name: bf-skinner-docks-big-cosco-ship.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docks-big-cosco-ship.jpg
-- name: rockingchair-rockingchair-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-asteroids.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-clean-view.jpg
-- name: abandonedbuildings_blue_electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_electricity.jpg
-- name: subway-subway-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-asteroids.jpg
-- name: copper-circuit-city-clouds-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-clouds-waterfront.jpg
-- name: locked-up-steam-lock-up-steam-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-gan-vogh.jpg
-- name: mosaic-face-mosaic-face-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-missle.jpg
+- name: dragon-desert-desert-dragon-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-marcel-duchamp.jpg
+- name: legal-statue-legalstatue-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-soul.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-colored-circuits.jpg
+- name: adam-smith-adam-smith-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-crunch-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crunch-paper.JPG
+- name: wind-mills-windmills-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-matrix.jpg
+- name: downtown-trucksilo-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-yellow-paper.jpg
+- name: window-window.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window.jpg
+- name: oldbarn-oldbarn-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dry-skin.jpg
+- name: old-school-house-old-schoolhouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-constitution.jpg
+- name: white-house-lawn-white-house-lawn-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-yellow-collage.jpg
+- name: carry-load-carryload-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-yellow-paper.jpg
+- name: old-church-oldchurch-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-neo-instinct.jpg
+- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
+- name: gypsymosaic-gypsy-eyes-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-electricity.jpg
+- name: windowmountain-window-mountain-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-rainbow-festival.jpg
+- name: copper-circuit-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-capital-records-building.jpg
+- name: mosaic-face-mosaic-face-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-clean-view.jpg
+- name: old-church-oldchurch-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-oily-mcoilface.jpg
+- name: bf-skinner-ship-bird-foreground.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-ship-bird-foreground.jpg
+- name: christianity-christianity-under-construction-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-purple-storm.jpg
+- name: death-valley-death-valley-national-park-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-purp-paper.jpg
+- name: trucksilo-trucksilo-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alien-goggles.jpg
+- name: catacombs-catacombs-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit.jpg
+- name: aws-s3-stories-adam-smith-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-dali-three.jpg
+- name: trucksilo-trucksilo-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-graham-sutherland.jpg
+- name: nyc-flag-nycflag-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-clean-view.jpg
+- name: power-lines-power-lines-empty-space-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-attack-planes.jpg
+- name: aws-s3-stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
+- name: art-museum-art-museum-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-marcel-duchamp.jpg
+- name: abe-lincoln-one-purple-pond-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-00-00.jpg
+- name: berlinwall2-berlinwall-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
+- name: oldbarn-oldbarn-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dali-two.jpg
+- name: oldhotel-oldhotel-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-creativity.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+- name: sand-hand-sand-hand-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-gan-vogh.jpg
+- name: school-clouds-church-clouds-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purp-paper.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-electricity.jpg
+- name: nyc-flag-nycflag-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gan-vogh.jpg
+- name: white-house-whitehouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-gan-vogh.jpg
+- name: old-barn-old-barn-1500-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-neo-instinct.jpg
+- name: liberty-back-statue-liberty-back-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gred-mash.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
+- name: sand-hand-sand-hand-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
+- name: old-granary-field-oldhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-three.jpg
+- name: old-door-lock-old-door-lock-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sand-paper.jpg
+- name: aws-s3-stories-new-beachclouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beachclouds-blue-circuit.jpg
+- name: legal-statue-legalstatue-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crunch-paper.jpg
 ---
 Car Bomb In Somali Capital Kills At Least 30, Spokesman Says.&nbsp;Lakewood Health System, Staples.&nbsp;Andrew Ridgeley Pays Tribute To George Michael's Late Sister Melanie Panayiotou.&nbsp;Top Story Countdown Continues.&nbsp;Cross Inks To Become A Golden Eagle.&nbsp;Byron, West Win Classic Basketball Openers.&nbsp;New Mayor Names Former Sheriff As Alexandria Police Chief.&nbsp;Recalling State's Worst Environmental Disaster.&nbsp;
